--- a/bitlab/scss/layout/_content.scss
+++ b/bitlab/scss/layout/_content.scss
@@ -78,7 +78,7 @@ h3{
 	flex-wrap: wrap;
 }
 .banner{
-	background: url(../img/bg1.jpg) no-repeat;
+	background: url(../img/bg1.jpg) 26% center no-repeat;
 	background-size: cover;
 	height: 100vh;
 	position: relative;
