--- a/bitlab/scss/layout/_content.scss
+++ b/bitlab/scss/layout/_content.scss
@@ -78,12 +78,38 @@ h3{
 	flex-wrap: wrap;
 }
 .banner{
-	background: url(../img/bg1.jpg) 26% center no-repeat;
-	background-size: cover;
-	height: 100vh;
+	background: url(../img/town.jpg) no-repeat;
+    background-size: calc(100% + 50px);
+    height: 700px;
 	position: relative;
+	overflow: hidden;
+	box-shadow: 0 0 0 9999px rgba(206,206,206,0.7) inset;
+	&::before{
+		content: "";
+		position: absolute;
+		background: url(../img/red.png) right bottom no-repeat;
+		width: 73.229167%;
+    	left: -48.3333333%;
+    	background-size: 100%;
+    	height: 110%;
+    	z-index: 5;
+	}
+	&::after{
+		content: "";
+		position: absolute;
+		background: url(../img/mac-2.png) left bottom no-repeat;
+		width: 82.760417%;
+    	left: -3.789474%;
+    	background-size: 100%;
+    	height: 86%;
+    	bottom: 0;
+    	z-index: 7;
+	}
 	.wrapper{
 		height: 100%;
+		width: 60.9375%;
+		position: relative;
+		z-index: 10;
 		&.flex{
 			justify-content: flex-end;
 		}
@@ -93,28 +119,44 @@ h3{
 	}
 	&__title{
 		color: #2c2a2b;
-		font: 70px GR;
+		font: 3.6458333333333335VW GR;
 	}
 	&__order{
-		width: 241px;
-		height: 67px;
-		font: 19px/30px RL;
+		width: 36%;
+		padding: 3% 0;
+		font: 0.9895833333333333VW RL;
 		letter-spacing: 0.02em;
 		text-transform: uppercase;
 		background: url(../img/btn.jpg) center center no-repeat;
 		border: 0;
 		background-size: 100% 100%;
-		margin-top: 50px;
+		margin-top: 7%;
 		color: #fff;
+	}
+}
+.line{
+	&_1{
+		position: absolute;
+		width: 9.635417%;
+		top: 12.142857%;
+		left: 2.604167%;
+		z-index: 6;
+	}
+	&_2{
+		position: absolute;
+		width: 54.947917%;
+		top: 53.571429%;
+		right: 20.989583%;
 	}
 }
 .mouse{
 	position: absolute;
 	display: block;
-	bottom: 60px;
+	bottom: 3.125%;
 	left: 50%;
 	margin-left: -13.5px;
 	cursor: pointer;
+	z-index: 11;
 }
 .aboutus{
 	background: #f4f4f4;
@@ -562,7 +604,7 @@ h3{
 		&::after{
 			content: url(../img/lines2.png);
 			position: absolute;
-			right: -44%;
+			right: -61%;
     		top: 40%;
 			z-index: -1;
 		}
@@ -739,7 +781,7 @@ h3{
 		&::after{
 			content: url(../img/lines4.png);
 			position: absolute;
-			right: -119%;
+			right: -129%;
     		top: 43%;
 			z-index: -1;
 		}
@@ -766,6 +808,7 @@ h3{
 			margin-left: auto;
 			position: relative;
 			padding: 2px 0;
+			cursor: pointer;
 			&::before{
 				content: "+";
 				font: 16px RL;
@@ -904,6 +947,7 @@ h3{
 		border: 1px solid #dedede;
 		background: #fff;
 		margin: 0 15px;
+		overflow: hidden;
 		&.flex{
 			display: flex !important;
 			justify-content: center;
@@ -966,6 +1010,7 @@ h3{
 }
 .modal{
 	&__main{
+		margin-top: 60px;
 		.title{
 			h2{
 				color: #fff;
@@ -1076,6 +1121,9 @@ h3{
     			color: #fff;
     		}
 		}
+		&_2{
+			margin-bottom: 18px;
+		}
 	}
 	&__terms{
 		margin-bottom: 12px;
@@ -1127,6 +1175,9 @@ h3{
 		}
 	}
 }
+.modal-send2, .modal-2{
+	background-image: url(../img/modal-2.png);
+}
 .overlay{
 	display: none;
 	position: fixed;
@@ -1157,7 +1208,7 @@ h3{
 			max-width: 970px;
 		}
 	}
-	.banner{
+	/*.banner{
 		&__title{
 			font-size: 50px;
 		}
@@ -1167,10 +1218,10 @@ h3{
     		font-size: 16px;
     		margin-top: 29px;
 		}
-	}
-	.mouse{
+	}*/
+	/*.mouse{
 		bottom: 15px;
-	}
+	}*/
 	.aboutus{
 		padding-top: 50px;
 		&__desc{
@@ -1382,17 +1433,17 @@ h3{
 	}
 	.banner{
 		&__title{
-			font-size: 40px;
+			/*font-size: 40px;*/
 		}
 		&__order{
-			width: 200px;
+			/*width: 200px;
     		height: 55px;
     		font-size: 15px;
-    		margin-top: 24px;
+    		margin-top: 24px;*/
 		}
 	}
 	.mouse{
-		bottom: 15px;
+		/*bottom: 15px;*/
 	}
 	.aboutus{
 		padding-top: 40px;
@@ -1659,10 +1710,18 @@ h3{
 
 @media screen and (max-width: 767px) {
 	.banner{
-		height: 350px;
+		height: 360px !important;
 		background-position: right;
 		padding-bottom: 20px;
+		background-size: cover;
+		&::before{
+			content: none;
+		}
+		&::after{
+			content: none;
+		}
 		.wrapper{
+			width: 100%;
 			&.flex{
 			    align-items: flex-end;
 			    justify-content: flex-start;
@@ -1676,6 +1735,14 @@ h3{
     		height: 50px;
     		font: 16px/30px RL;
     		margin-top: 25px;
+		}
+	}
+	.line{
+		&_1{
+			display: none;
+		}
+		&_2{
+			display: none;
 		}
 	}
 	.mouse{
