--- a/bitlab/scss/layout/_header.scss
+++ b/bitlab/scss/layout/_header.scss
@@ -11,19 +11,21 @@ header{
 .header{
 	position: absolute;
 	width: 100%;
+	z-index: 10;
 	.wrapper{
 		background: url(../img/line.png) center bottom no-repeat;
 		background-size: 100%;
-		padding: 20px 20px 28px;
+		padding: 1% 1% 1.4%;
 		position: relative;
+		width: 60.9375%;
 	}
 	&__nav{
-		width: 680px;
+		width: 60.1%;
 		ul{
 			list-style: none;
 			li{
 				a{
-					font: 22px RL;
+					font: 1.1458333333333333VW RL;
 					color: #2c2a2b;
     				padding: 3px 0;
     				&:hover{
@@ -32,6 +34,12 @@ header{
 				}
 			}
 		}
+	}
+}
+.logo{
+	width: 14.6%;
+	img{
+		width: 100%;
 	}
 }
 .phone{
@@ -43,7 +51,7 @@ header{
     	margin-bottom: 1px;
 	}
 	a{
-		font: 21px/30px GR;
+		font: 1.09375VW GR;
 		letter-spacing: 0.02em;
 		color: #262626;
 	}
@@ -52,6 +60,7 @@ header{
 	position: absolute;
 	right: 8px;
 	top: 5px;
+	right: 0.8%;
 	&__item{
 		padding: 0 12px;
 		opacity: 0.5;
@@ -75,26 +84,29 @@ header{
 		}
 	}
 }
+.toggle{
+	display: none;
+}
 
 
 @media screen and (min-width: 992px) and (max-width: 1200px) {
 	.header{
 		.wrapper{
 			max-width: 970px;
-			padding: 20px;
+			/*padding: 20px;*/
 		}
 		&__nav{
-			width: 500px;
+			/*width: 500px;*/
 			ul{
 				li{
 					a{
-						font-size: 16px;
+						/*font-size: 16px;*/
 					}
 				}
 			}
 		}
 	}
-	.logo{
+	/*.logo{
 		img{
 			width: 140px;
 		}
@@ -103,6 +115,9 @@ header{
 		a{
 			font-size: 19px;
 		}
+	}*/
+	.langs{
+		display: none;
 	}
 }
 
@@ -110,14 +125,14 @@ header{
 	.header{
 		.wrapper{
 			max-width: 760px;
-			padding: 20px;
+			/*padding: 20px;*/
 		}
 		&__nav{
-			width: 370px;
+			/*width: 370px;*/
 			ul{
 				li{
 					a{
-						font-size: 15px;
+						/*font-size: 15px;*/
 					}
 				}
 			}
@@ -125,13 +140,16 @@ header{
 	}
 	.logo{
 		img{
-			width: 120px;
+			/*width: 120px;*/
 		}
 	}
 	.phone{
 		a{
-			font-size: 17px;
+			/*font-size: 17px;*/
 		}
+	}
+	.langs{
+		display: none !important;
 	}
 }
 
@@ -139,22 +157,54 @@ header{
 	.header{
 		.wrapper{
 			background: none;
+			padding: 20px 20px 28px;
+			width: 100%;
 		}
 		&__nav{
+			width: 100%;
 			ul{
 				li{
-					margin: 0 10px;
+					margin: 0;
+					padding: 3px 0;
+					width: 50%;
+					a{
+						font-size: 22px;
+					}
 				}
 			}
 		}
 	}
 	.logo{
 		margin-bottom: 10px;
+		width: 130px;
 		img{
 		    width: 130px;
 		}
 	}
+	.phone{
+		padding-top: 6px;
+    	width: 100%;
+		a{
+			font-size: 21px;
+		}
+	}
 	.langs{
 		top: 25px;
+	}
+	.toggle{
+		display: block;
+		position: absolute;
+		top: 75px;
+		right: 16px;
+		span{
+			width: 30px;
+			display: block;
+			height: 3px;
+			background: #2c2a2b;
+			margin-bottom: 6px;
+			&:last-child{
+				margin-bottom: 0;
+			}
+		}
 	}
 }
