--- a/bitlab/css/style.css
+++ b/bitlab/css/style.css
@@ -804,6 +804,7 @@ h3 {
   width: 60.9375%;
   position: relative;
   z-index: 10;
+  max-width: 100%;
 }
 .banner .wrapper.flex {
   justify-content: flex-end;
@@ -914,6 +915,18 @@ h3 {
   color: #2c2a2b;
   font: 17px RL;
   text-align: center;
+}
+.aboutus .round1 {
+  position: absolute;
+  z-index: -2;
+  top: -138px;
+  left: -34px;
+}
+.aboutus .round2 {
+  position: absolute;
+  z-index: -2;
+  top: -89px;
+  left: 14px;
 }
 
 .team {
@@ -1062,6 +1075,12 @@ h3 {
 .services__top {
   margin-bottom: 85px;
 }
+.services__bott_5.flex {
+  justify-content: space-around;
+}
+.services__bott.flex {
+  align-items: stretch;
+}
 .services__item {
   width: 218px;
   height: 136px;
@@ -1099,13 +1118,15 @@ h3 {
 }
 .services__item1 {
   width: 263px;
-  min-height: 642px;
+  border-bottom: 6px solid #e4e4e4;
   position: relative;
+  padding-bottom: 7px;
+  overflow: hidden;
 }
 .services__item1::after {
   content: url(../img/bg-serv.png);
   position: absolute;
-  bottom: 0;
+  top: 43px;
   left: 0;
   z-index: 3;
 }
@@ -1125,12 +1146,18 @@ h3 {
   justify-content: flex-start;
   flex-direction: column;
 }
+.services__title_2 {
+  padding-top: 5px;
+}
 .services__name {
   width: 100%;
   font: 22px RL;
   text-align: center;
   color: #fff;
   margin-bottom: 6px;
+}
+.services__name_2 {
+  font-size: 20px;
 }
 .services__price {
   font: 24px GR;
@@ -1172,6 +1199,8 @@ h3 {
 .services__row span {
   font: 17px RL;
   color: #2c2a2b;
+  display: block;
+  width: 87%;
 }
 .services__row span.bold {
   font: 15px GR;
@@ -1180,6 +1209,7 @@ h3 {
 .services__row p {
   font: 15px RL;
   color: #2c2a2b;
+  width: 88%;
 }
 .services__row_minus span {
   color: #9c9c9c;
@@ -1189,6 +1219,15 @@ h3 {
 }
 .services__row_blur {
   filter: blur(3px);
+}
+.services__row_img {
+  height: 162px;
+  display: flex;
+  justify-content: center !important;
+  align-items: center;
+}
+.services__row_bm {
+  margin-bottom: 75px;
 }
 .services__buy {
   font: 19px/30px RL;
@@ -1255,6 +1294,10 @@ h3 {
 .sites {
   background: #f4f4f4;
   padding: 65px 0 90px;
+  display: none;
+}
+.sites_1 {
+  display: block;
 }
 .sites__left {
   width: 570px;
@@ -1271,6 +1314,14 @@ h3 {
 .sites__left img {
   margin-left: -66px;
 }
+.sites__left_2::before {
+  content: url(../img/lines5.png);
+  top: -10px;
+}
+.sites__left_3::before {
+  content: url(../img/lines7.png);
+  /*top: -10px;*/
+}
 .sites__right {
   width: 570px;
   z-index: 2;
@@ -1284,6 +1335,9 @@ h3 {
   right: -61%;
   top: 40%;
   z-index: -1;
+}
+.sites__right_2::after {
+  content: url(../img/lines6.png);
 }
 .sites__item {
   margin-bottom: 30px;
@@ -1326,12 +1380,18 @@ h3 {
   left: 80px;
   z-index: -1;
 }
+.sites__item_na::before {
+  content: none;
+}
 .sites__img {
   width: 59px;
   margin-right: 20px;
 }
 .sites__img.flex {
   justify-content: center;
+}
+.sites__info {
+  width: 85%;
 }
 .sites__info h2 {
   color: #2c2a2b;
