--- a/bitlab/scss/layout/_content.scss
+++ b/bitlab/scss/layout/_content.scss
@@ -110,6 +110,7 @@ h3{
 		width: 60.9375%;
 		position: relative;
 		z-index: 10;
+		max-width: 100%;
 		&.flex{
 			justify-content: flex-end;
 		}
@@ -230,6 +231,18 @@ h3{
 		color: #2c2a2b;
 		font: 17px RL;
 		text-align: center;
+	}
+	.round1{
+		position: absolute;
+		z-index: -2;
+		top: -138px;
+    	left: -34px;
+	}
+	.round2{
+		position: absolute;
+		z-index: -2;
+		top: -89px;
+    	left: 14px;
 	}
 }
 .team{
@@ -386,6 +399,16 @@ h3{
 	&__top{
 		margin-bottom: 85px;
 	}
+	&__bott{
+		&_5{
+			&.flex{
+				justify-content: space-around;
+			}
+		}
+		&.flex{
+			align-items: stretch;
+		}
+	}
 	&__item{
 		width: 218px;
 		height: 136px;
@@ -423,12 +446,14 @@ h3{
 	}
 	&__item1{
 		width: 263px;
-		min-height: 642px;
+		border-bottom: 6px solid #e4e4e4;
 		position: relative;
+		padding-bottom: 7px;
+		overflow: hidden;
 		&::after{
 			content: url(../img/bg-serv.png);
 			position: absolute;
-			bottom: 0;
+			top: 43px;
 			left: 0;
 			z-index: 3;
 		}
@@ -448,6 +473,9 @@ h3{
 			justify-content: flex-start;
 			flex-direction: column;
 		}
+		&_2{
+			padding-top: 5px;
+		}
 	}
 	&__name{
 		width: 100%;
@@ -455,6 +483,9 @@ h3{
 		text-align: center;
 		color: #fff;
 		margin-bottom: 6px;
+		&_2{
+			font-size: 20px;
+		}
 	}
 	&__price{
 		font: 24px GR;
@@ -495,6 +526,8 @@ h3{
 		span{
 			font: 17px RL;
 			color: #2c2a2b;
+			display: block;
+    		width: 87%;
 			&.bold{
 				font: 15px GR;
 				color: #2c2a2b;
@@ -503,6 +536,7 @@ h3{
 		p{
 			font: 15px RL;
 			color: #2c2a2b;
+			width: 88%;
 		}
 		&_minus{
 			span{
@@ -514,6 +548,15 @@ h3{
 		}
 		&_blur{
 			filter: blur(3px);
+		}
+		&_img{
+			height: 162px;
+			display: flex;
+			justify-content: center !important;
+			align-items: center;
+		}
+		&_bm{
+			margin-bottom: 75px;
 		}
 	}
 	&__buy{
@@ -583,6 +626,10 @@ h3{
 .sites{
 	background: #f4f4f4;
 	padding: 65px 0 90px;
+	display: none;
+	&_1{
+		display: block;
+	}
 	&__left{
 		width: 570px;
 		position: relative;
@@ -597,6 +644,18 @@ h3{
 		img{
 			margin-left: -66px;
 		}
+		&_2{
+			&::before{
+				content: url(../img/lines5.png);
+				top: -10px;
+			}
+		}
+		&_3{
+			&::before{
+				content: url(../img/lines7.png);
+				/*top: -10px;*/
+			}
+		}
 	}
 	&__right{
 		width: 570px;
@@ -607,6 +666,11 @@ h3{
 			right: -61%;
     		top: 40%;
 			z-index: -1;
+		}
+		&_2{
+			&::after{
+				content: url(../img/lines6.png);
+			}
 		}
 		/*img{
 			margin-left: -66px;
@@ -658,6 +722,11 @@ h3{
 				z-index: -1;
 			}
 		}
+		&_na{
+			&::before{
+				content: none;
+			}
+		}
 	}
 	&__img{
 		width: 59px;
@@ -667,6 +736,7 @@ h3{
 		}
 	}
 	&__info{
+		width: 85%;
 		h2{
 			color: #2c2a2b;
 			font: 18px GR;
